--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "liveterm",
+  "name": "rithish-portfolio",
   "version": "0.1.0",
   "license": "MIT",
   "author": {
     "name": "Vincent Wu",
-    "url": "https://cveinnt.com",
-    "email": "contact@wensenwu.com"
+    "url": "https://cveinnt.github.io",
+    "email": "rithishk2003@gmail.com"
   },
   "scripts": {
     "dev": "next dev",
